# img_from_clip

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Main.qml  README.md  ScriptingPage.qml  StorePreferences.qml  appimg_from_clip_en.ts  appimg_from_clip_ko.ts  appimg_from_clip_pl.ts  captureobject.cpp  captureobject.h  clipboardcontents.cpp  clipboardcontents.h  clipboardsource.cpp  clipboardsource.h  clipmonitor.cpp  clipmonitor.h  com.jpelczar.img_from_clip.json  config.h.in  lua_pixmap.cpp  lua_pixmap.h  lua_qtclasses.h  luacapturescript.cpp  luacapturescript.h  main.cpp  platformsupport.cpp  platformsupport.h  platformsupport_apple.mm  platformsupport_dbus.cpp  platformsupport_generic.cpp  renderconfiguration.cpp  renderconfiguration.h  rsvg_helper.cpp  rsvg_helper.h  scriptingsupport.cpp  scriptingsupport.h  snapcraft.yaml  systray.cpp  (+1 more)
.github/workflows/: appimage.yml  cmake-multi-platform.yml  flatpak-master.yaml
flatpak/: .gitignore  build.sh  com.jpelczar.img_from_clip.json
shared/: CMakeLists.txt
shared/linux/: com.jpelczar.img_from_clip.appdata.xml  com.jpelczar.img_from_clip.desktop.in
shared/windows/: icon.rc  make_icon.sh
snap/: snapcraft.yaml
